Update 'awsqzs4qj-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:a7a51a83e10660f1a34a72e5fb33a80f8a0f9755@sha256:b726292b7c677628438eaf689035721d9b151b26458c52fba8457d8a5b4c8392

--- a/components/awsqzs4qj-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/awsqzs4qj-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: awsqzs4qj-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:a7a51a83e10660f1a34a72e5fb33a80f8a0f9755@sha256:b726292b7c677628438eaf689035721d9b151b26458c52fba8457d8a5b4c8392
+          name: container-image
